Fixed the responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
     overflow-x: hidden;
 }
 
+
+ /* Navigation */
+
 .main-nav{
     float: right;
     list-style: none;
@@ -13,22 +16,13 @@ body{
     display: inline-block;
 }
 
-.container-flex{
+/* .container-flex{
     margin:1rem 3rem;
-}
+} */
 .main-nav li{
     display: inline-block;
     margin-left: 40px;
 }
-
-.container{
-    display: grid;
-    grid-template-columns: auto 1fr;
-   grid-gap:20px;
-   
-}
-
-
 nav{
 
     margin:0 !important;
@@ -37,30 +31,13 @@ nav{
 
 nav >ul li {
     /* float: right; */
-    margin: 1% 0% ;
+    margin: 0% 0% ;
     display: inline-block;
     list-style: none;
     color:#707070;
 }
 
 
-footer ul li{
-    display: inline-block;
-    cursor: pointer;
-    color:white;
-    margin-right:30px;
-    list-style-type: none !important;
-}
-footer {
-    display: grid;
-    grid-template-columns: 1fr;
-    text-align: center;
-}
-footer a{
-    text-decoration: none;
-    display: inline-block;
-    list-style-type: none !important;
-}
  .logo img{
     width: 50%;
     height: 50%;
@@ -72,14 +49,14 @@ footer a{
     float: left; 
     margin-top: 5px;
 }
-nav .nav-button{
+/* nav .nav-button{
     padding: 7px 8px;
    border-width: 2px;
    border-style: solid;
    color:#707070;
    cursor: pointer;
    transition: 0.1s background-color linear, 0.1s color linear;
-}
+} */
 .row{
     max-width: 1140px;
     margin: 0 auto;
@@ -93,6 +70,16 @@ nav .nav-button{
     width:100%;
     background-color: #ffffffe3;
 }
+/* Header and Section */
+
+
+.container{
+    display: grid;
+    grid-template-columns: auto 1fr;
+   grid-gap:20px;
+   
+}
+
 
 ul li a, a{
    cursor: pointer;
@@ -153,8 +140,6 @@ section .nav-button,
 
 }
 
-
-
 .first-section p{
     font-size: 25px;
     color: #707070;
@@ -190,18 +175,39 @@ hr{
 .mobile-nav-icon{
     float:right;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 0px;
     display: none;
     
 }
 .mobile-nav-icon i{
-    font-size: 16px;
+    font-size: 24px;
     color:#707070;
 }
+/* footer */
+
 footer{
     background-color: dimgrey;
     height:200px;
     margin-top: 20px;
+}
+
+
+footer ul li{
+    display: inline-block;
+    cursor: pointer;
+    color:white;
+    margin-right:30px;
+    list-style-type: none !important;
+}
+footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+}
+footer a{
+    text-decoration: none;
+    display: inline-block;
+    list-style-type: none !important;
 }
 
 /* About Page styling */
@@ -299,7 +305,7 @@ input[type="submit"]{
            font-weight: 400;
            margin-block-start: 1em;
            margin-block-end: 1em;
-           margin-bottom: 40 px;
+           margin-bottom: 40px;
           
        }
 
@@ -437,6 +443,9 @@ input[type="submit"]{
     .main-nav  {
         display: block;
     } 
+    .row{
+        padding:1% 1.1%;
+      }
     
 
   
@@ -461,7 +470,7 @@ input[type="submit"]{
     }
 
     .container-flex{
-        margin:0rem 0rem;
+        margin:0 !important;
     }
 
     .logo img{
@@ -524,33 +533,38 @@ input[type="submit"]{
         color: #707070;
         font-weight: 400;
         margin-block-start: 1em;
-        margin-block-end: 1em;
-        
-       
+        margin-block-end: 1em;     
     }
 
     section{
         display: grid;
         grid-template-columns: 1fr;
         margin: 30px 0px !important;
-    
     } 
 
     .second-section{
         margin: 10px 0px;
-
     }
     .main-nav  {
         display: none;
     } 
     .main-nav  {
-        float: left;
-        
+        float: left;    
     }
+
+    .about-container  p{
+        padding: 5px 5px;
+        font-size:16px;
+        line-height: 23px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    
     
     .mobile-nav-icon{
         cursor: pointer;
-        margin-top: 10px;
+        margin-top: 0px;
         display: inline-block;          
     }
 
@@ -564,15 +578,17 @@ input[type="submit"]{
     }
     
    nav li{
-        margin-top:10px !important;
+        margin-top:5px !important;
         margin-left:20px !important;
-        margin-bottom:20px !important;
+        margin-bottom:10px !important;
         margin-right: 0 !important;
         padding: 0px !important;
     }
   nav  ul{
         margin:0 !important;
-        padding: 0 10px !important;
+        padding: 0 2px !important;
     }
-   
+    .row{
+        padding:2% 2%;
+      }
 }
